--- a/Practical5/Web.config
+++ b/Practical5/Web.config
@@ -8,6 +8,23 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
+    <authentication mode="Forms"></authentication>
+    <roleManager enabled="true"></roleManager>
+    <membership>
+      <providers>
+        <clear/>
+        <add name="AspNetSqlMemberShipProvider" type="System.Web.Security.SqlMembershipProvider"
+             connectionStringName="Membership"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requireUniqueEmail="false"
+             minRequiredPasswordLength="5"
+             minRequiredNonalphanumericCharacters="0"
+             passwordFormat="Hashed" />
+      </providers>
+    </membership>
+    
   </system.web>
   <system.codedom>
     <compilers>
@@ -20,4 +37,12 @@
     </compilers>
   </system.codedom>
 
+  <connectionStrings>
+    <add name="Membership" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\Practical5\Practical5\App_Data\Database1.mdf;Integrated Security=SSPI;"/>
+  </connectionStrings>
+
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+  </appSettings>
 </configuration>
+
