--- a/Practical5/Web.config
+++ b/Practical5/Web.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
+
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -25,6 +26,8 @@
       </providers>
     </membership>
     
+
+  
   </system.web>
   <system.codedom>
     <compilers>
@@ -38,7 +41,7 @@
   </system.codedom>
 
   <connectionStrings>
-    <add name="Membership" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\Practical5\Practical5\App_Data\Database1.mdf;Integrated Security=SSPI;"/>
+    <add name="Membership" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\taruc\Source\Repos\Summer980829\Practical5\Practical5\App_Data\Membership.mdf;Integrated Security=SSPI;"/>
   </connectionStrings>
 
   <appSettings>
